--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
 		<link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
 
 		<link rel="apple-touch-icon" href="/favicon.png" />
-		<link rel="apple-touch-startup-image" href="/favicon.png" type="image/png" />
+		<link
+			rel="apple-touch-startup-image"
+			href="/favicon.png"
+			type="image/png"
+		/>
 
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:site" content="@twhlynch" />
@@ -43,19 +47,12 @@
 		<meta name="twitter:image" content="/favicon.png" />
 		<meta name="twitter:url" content="https://grabvr.tools" />
 
-		<link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin />
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com/"
+			crossorigin
+		/>
 		<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
-
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-BDS57RBQ3Q"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag('js', new Date());
-
-			gtag('config', 'G-BDS57RBQ3Q');
-		</script>
 
 		<script type="module" src="/src/main.js" defer></script>
 	</head>
